--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
