--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ SECRET_KEY= 'VEGE_JWT_SECRET';
 
 GMAIL_USER=vege.mfee41@gmail.com
 GMAIL_PASS=bnaqpoodkbanjhwp
+
+LINE_PAY_CHANNELID=2000795264
+LINE_PAY_SECRET=e9a7a7115528365c14f7e0716c5487b6
