--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.5",
+    "request-promise": "^4.2.6",
     "twzipcode.js": "^3.0.1"
   }
 }
